modified the add hotkey section