@@ -415,4 +415,9 @@ public class Main extends Application {
 
         helpAlert.showAndWait();
     }
+
+
+    /**
+     * --module-path "C:\Program Files\Java\javafx-sdk-21.0.6\lib" --add-modules javafx.controls,javafx.fxml
+     * */
 }
